change dbserver
